[package]
name = "web_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.31.0"
tokio = { version = "1.20.1", features = ["full"] }
futures = "0.3.23"
postgres = {version = "0.19.4", features = ["with-chrono-0_4"]}
chrono = "0.4"